--- a/src/pages/onsite-login/onsite-login.scss
+++ b/src/pages/onsite-login/onsite-login.scss
@@ -1,3 +1,22 @@
 page-onsite-login {
-
+    .center-form {
+        top: 75px;
+        left: 0;
+    }
+    div.card {
+        background-color: transparent;
+        box-shadow: none;
+    }
+    form.border {
+        border: none;
+    }
+    div.card form {
+        background-color: transparent;
+    }
+    div.input-group {
+        border: none;
+        background-color: rgba( 17, 193, 243, 0.1);
+    }
 }
+
+
