--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -188,7 +188,7 @@ form.border {
 }
 
 form:first-child {
-    padding-top: 2.5vw;
+    padding-top: 2.5vh;
 }
 
 ion-content,
@@ -225,7 +225,6 @@ input {
     height: 40px;
     line-height: 40px;
     flex: 0 0 20vw;
-    margin: 0;
     padding: 0;
     border: none;
     padding: 0 3px 0 0;
@@ -243,7 +242,11 @@ div#inner-editor {
     border: none;
     background-color: rgba(255, 255, 255, 0.8);
     color: #191970;
-    box-shadow: inset -1px -1px 3px 0px rgba(136, 136, 136, 0.6);
+    box-shadow: inset -1px -1px 1.5px 0px rgba(136, 136, 136, 0.6);
+}
+
+.input-group input {
+    border: thin solid rgba(0, 0, 0, 0.2);
 }
 
 button.button-block {
