--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -12,58 +12,61 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-ion-content,
-ion-content [padding] .content-ios div.fixed-content,
-ion-content.content-ios div.scroll-content,
-ion-content [padding] .content-md div.fixed-content,
-ion-content.content-md div.scroll-content,
-ion-content [padding] .content-wp div.fixed-content,
-ion-content.content-wp div.scroll-content,
-ion-content [padding] .content div.fixed-content,
-ion-content.content div.scroll-content {
-    // margin: 0 !important;
-    // padding: 0 !important;
-    left: 0 !important;
-}
+// ion-content,
+// ion-content [padding] .content-ios div.fixed-content,
+// ion-content.content-ios div.scroll-content,
+// ion-content [padding] .content-md div.fixed-content,
+// ion-content.content-md div.scroll-content,
+// ion-content [padding] .content-wp div.fixed-content,
+// ion-content.content-wp div.scroll-content,
+// ion-content [padding] .content div.fixed-content,
+// ion-content.content div.scroll-content {
+//     margin-left: 0 !important;
+//     left: 0 !important;
+// }
 
-.toolbar-title-md {
-    padding: 0 12px;
-    font-weight: 300;
-}
+// .scroll-content {
+//     padding: 0;
+// }
 
-ion-navbar.toolbar toolbar-ios .back-button,
-ion-navbar.toolbar toolbar-ios .disable-hover,
-ion-navbar.toolbar toolbar-ios .bar-button,
-ion-navbar.toolbar toolbar-ios .bar-button-ios,
-ion-navbar.toolbar toolbar-ios .back-button-ios,
-ion-navbar.toolbar toolbar-ios .bar-button-default,
-ion-navbar.toolbar toolbar-ios .bar-button-default-ios,
-ion-navbar.toolbar toolbar-ios .show-back-button {
-    font-weight: 300;
-}
+// .toolbar-title-md {
+//     padding: 0 12px;
+//     font-weight: 300;
+// }
 
-div.icon-title {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: baseline;
-}
+// ion-navbar.toolbar toolbar-ios .back-button,
+// ion-navbar.toolbar toolbar-ios .disable-hover,
+// ion-navbar.toolbar toolbar-ios .bar-button,
+// ion-navbar.toolbar toolbar-ios .bar-button-ios,
+// ion-navbar.toolbar toolbar-ios .back-button-ios,
+// ion-navbar.toolbar toolbar-ios .bar-button-default,
+// ion-navbar.toolbar toolbar-ios .bar-button-default-ios,
+// ion-navbar.toolbar toolbar-ios .show-back-button {
+//     font-weight: 300;
+// }
 
-div.icon-title h1 {
-    margin-left: 20vw;
-    flex: 1 1 50%;
-    max-width: 60vw;
-}
+// div.icon-title {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+//     justify-content: space-between;
+//     align-items: baseline;
+// }
 
-div.icon-title ion-icon {
-    flex: 1 1 50%;
-    margin-right: 2.5vw;
-    max-width: 20vw;
-    font-size: 35px;
-    line-height: 35px;
-    text-align: right;
-}
+// div.icon-title h1 {
+//     margin-left: 20vw;
+//     flex: 1 1 50%;
+//     max-width: 60vw;
+// }
+
+// div.icon-title ion-icon {
+//     flex: 1 1 50%;
+//     margin-right: 2.5vw;
+//     max-width: 20vw;
+//     font-size: 35px;
+//     line-height: 35px;
+//     text-align: right;
+// }
 
 * {
     clear: both;
@@ -106,90 +109,90 @@ body {
     font-weight: 300;
 }
 
-h1 {
-    margin-top: 10px;
-    font-size: 22px;
-    line-height: 22px;
-}
+// h1 {
+//     margin-top: 10px;
+//     font-size: 22px;
+//     line-height: 22px;
+// }
 
-h2 {
-    margin-top: 7px;
-    font-size: 20px;
-    line-height: 20px;
-}
+// h2 {
+//     margin-top: 7px;
+//     font-size: 20px;
+//     line-height: 20px;
+// }
 
-h3 {
-    font-size: 18px;
-    line-height: 18px;
-}
+// h3 {
+//     font-size: 18px;
+//     line-height: 18px;
+// }
 
-h4 {
-    font-size: 18px;
-    line-height: 18px;
-}
+// h4 {
+//     font-size: 18px;
+//     line-height: 18px;
+// }
 
-h5 {
-    font-size: 18px;
-    line-height: 18px;
-}
+// h5 {
+//     font-size: 18px;
+//     line-height: 18px;
+// }
 
-h6 {
-    font-size: 18px;
-    line-height: 18px;
-}
+// h6 {
+//     font-size: 18px;
+//     line-height: 18px;
+// }
 
 .nav-decor,
 div.nav-decor {
     background: transparent;
 }
 
-div.card {
-    left: 0;
-    width: 95vw;
-    padding: 2.5vh 0 2.5vh 0;
-    margin: 2.5vw 2.5vw 2.5vw 2.5vw;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: baseline;
-    align-content: flex-start;
-    background-color: rgba(255, 255, 255, 0.6);
-    box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.15);
-}
+// div.card {
+//     left: 0;
+//     width: 95vw;
+//     padding: 2.5vh 0 2.5vh 0;
+//     margin: 2.5vw 2.5vw 2.5vw 2.5vw;
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     justify-content: flex-start;
+//     align-items: baseline;
+//     align-content: flex-start;
+//     background-color: rgba(255, 255, 255, 0.6);
+//     box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.15);
+// }
 
-div.card form {
-    left: 0;
-    width: 90vw;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: baseline;
-    align-content: flex-start;
-    background-color: rgba(10, 10, 10, 0.1);
-}
+// div.card form {
+//     left: 0;
+//     width: 90vw;
+//     margin: auto;
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     justify-content: flex-start;
+//     align-items: baseline;
+//     align-content: flex-start;
+//     background-color: rgba(10, 10, 10, 0.1);
+// }
 
-form {
-    left: 0;
-    width: 95vw;
-    margin: 2.5vw 2.5vw 2.5vw 2.5vw;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: baseline;
-    align-content: flex-start;
-}
+// form {
+//     left: 0;
+//     width: 95vw;
+//     margin: 2.5vw 2.5vw 2.5vw 2.5vw;
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     justify-content: flex-start;
+//     align-items: baseline;
+//     align-content: flex-start;
+// }
 
-form.border {
-    border: thin solid rgba(10, 10, 10, 0.15);
-}
+// form.border {
+//     border: thin solid rgba(10, 10, 10, 0.15);
+// }
 
-form:first-child {
-    padding-top: 2.5vh;
-}
+// form:first-child {
+//     padding-top: 2.5vh;
+// }
 
 ion-content,
 ion-content.content-ios,
@@ -205,7 +208,7 @@ ion-content.content-wp,
 div.input-group {
     font-size: 16px;
     width: 90vw;
-    padding: 2.5vw 2.5vw 2.5vw 2.5vw;
+    padding: 2.5vw auto 2.5vw auto;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -216,6 +219,10 @@ div.input-group {
     background-color: rgba(0, 0, 0, 0.075);
 }
 
+form {
+    margin: auto;
+}
+
 label,
 input {
     display: block;
@@ -224,11 +231,10 @@ input {
 .input-group .label {
     height: 40px;
     line-height: 40px;
-    flex: 0 0 20vw;
-    padding: 0;
+    flex: 0 0 30vw;
+    padding: 0 15px 0 0;
     border: none;
-    padding: 0 3px 0 0;
-    text-align: left;
+    text-align: right;
 }
 
 .input-group input,
@@ -249,43 +255,43 @@ div#inner-editor {
     border: thin solid rgba(0, 0, 0, 0.2);
 }
 
-button.button-block {
-    flex: 0 0 90%;
-    margin: 5% 5% 5% 5%;
-    height: 40px;
-    font-size: 22px;
-    line-height: 40px;
-}
+// button.button-block {
+//     flex: 0 0 90%;
+//     margin: 5% 5% 5% 5%;
+//     height: 40px;
+//     font-size: 22px;
+//     line-height: 40px;
+// }
 
-div#button-page {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: baseline;
-    align-content: center;
-}
+// div#button-page {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     justify-content: space-around;
+//     align-items: baseline;
+//     align-content: center;
+// }
 
-#button-page button {
-    flex: 1 1 auto;
-}
+// #button-page button {
+//     flex: 1 1 auto;
+// }
 
-ion-navbar.toolbar.toolbar-ios div.toolbar-title.toolbar-title-ios,
-ion-title.title-ios div.toolbar-title.toolbar-title-ios,
-div.toolbar-content.toolbar-content-ios div.toolbar-title.toolbar-title-ios {
-    position: absolute;
-    top: -22px;
-    left: -52px;
-    display: block !important;
-    width: 100vw;
-    height: 44px !important;
-    line-height: 44px !important;
-}
-.back-button-ios.disable-hover.bar-button.bar-button-ios.back-button-ios.bar-button-default.bar-button-default-ios.show-back-button {
-    height: 44px !important;
-    line-height: 44px !important;
-    font-weight: 200;
-}
+// ion-navbar.toolbar.toolbar-ios div.toolbar-title.toolbar-title-ios,
+// ion-title.title-ios div.toolbar-title.toolbar-title-ios,
+// div.toolbar-content.toolbar-content-ios div.toolbar-title.toolbar-title-ios {
+//     position: absolute;
+//     top: -22px;
+//     left: -52px;
+//     display: block !important;
+//     width: 100vw;
+//     height: 44px !important;
+//     line-height: 44px !important;
+// }
+// .back-button-ios.disable-hover.bar-button.bar-button-ios.back-button-ios.bar-button-default.bar-button-default-ios.show-back-button {
+//     height: 44px !important;
+//     line-height: 44px !important;
+//     font-weight: 200;
+// }
 // div.toolbar-title toolbar-title-md,
 // div.toolbar-title.toolbar-title-ios,
 // div.toolbar-title.toolbar-title-wp {
