--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,45 +19,6 @@ $font-family-ios-base:                      "Lato" !default;
 $font-family-md-base:                       "Lato" !default;
 $font-family-wp-base:                       "Lato" !default;
 
-// Dark Theme
-// ----------------------------------
-// rgb( 56, 126, 245)
-// rgb(255, 201,   0)
-// rgb(245,  61,  61)
-// rgb(244, 244, 244)
-// rgb( 68,  68,  68)
-// rgb( 17, 193, 243)
-$colors: (
-  primary:                                  #387ef5,
-  secondary:                                #ffc900,
-  danger:                                   #f53d3d,
-  light:                                    #f4f4f4,
-  dark:                                     #444444,
-  favorite:                                 #11c1f3
-) !default;
-
-
-$text-color:                                #e6e6bb  !default; // rgb(230, 230, 187)
-$link-color:                                color($colors, primary)  !default;
-$background-color:                          #191919  !default;
-$subdued-text-color:                        #666  !default;
-
-$font-family-base:                          "Lato" !default;
-$font-size-base:                            14px  !default; // 1.4rem == 14px
-
-$content-padding:                           16px  !default;
-$content-margin:                            16px  !default;
-
-$toolbar-background:                        #606060  !default; // rgb(  96,  96,  96)
-$toolbar-border-color:                      color($colors, dark)  !default;
-$toolbar-text-color:                        $text-color  !default;
-$toolbar-active-color:                      $link-color  !default;
-$toolbar-inactive-color:                    #8c8c8c  !default;
-
-$list-text-color:                           $text-color  !default;
-$list-background-color:                     #242424  !default;
-$list-border-color:                         #000  !default;
-
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
@@ -72,14 +33,44 @@ $list-border-color:                         #000  !default;
 // rgb(244, 244, 244)
 // rgb( 68,  68,  68)
 // rgb( 17, 193, 243)
+$text-color: #ffffff;
+
 $colors: (
+
   primary:    #387ef5,
   secondary:  #ffc900,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #444444,
+  dark:       #353535,
+  med-dark:   #565656,
   favorite:   #11c1f3
-);
+
+) !default;
+
+// Dark Theme
+// ----------------------------------
+
+$text-color:                                #ffffff                  !default;
+$link-color:                                color($colors, light)    !default;
+$background-color:                          color($colors, primary)  !default;
+$subdued-text-color:                        #666  !default;
+
+$font-family-base:                          "Lato" !default;
+$font-size-base:                            14px  !default; // 1.4rem == 14px
+
+$content-padding:                           16px  !default;
+$content-margin:                            16px  !default;
+
+$toolbar-background:                        #606060  !default; // rgb(  96,  96,  96)
+$toolbar-border-color:                      color($colors, favorite)  !default;
+$toolbar-text-color:                        $text-color  !default;
+$toolbar-active-color:                      $link-color  !default;
+$toolbar-inactive-color:                    #8c8c8c  !default;
+
+$list-text-color:                           $text-color  !default;
+$list-background-color:                     color($colors, med-dark)  !default;
+$list-border-color:                         #000  !default;
+
 
 $colors-ios: (
   primary:    #387ef5,
