layout and nav for tech home page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,7 @@ $colors: (
   primary:    #387ef5,
   secondary:  #ffc900,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #fefefe,
   dark:       #353535,
   med-dark:   #565656,
   favorite:   #11c1f3,
@@ -78,8 +78,8 @@ $colors-ios: (
   primary:    #387ef5,
   secondary:  #ffc900,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #444444,
+  light:      #fefefe,
+  dark:       #303030,
   favorite:   #11c1f3,
   splash:     #10CF9B
 );
@@ -88,8 +88,8 @@ $colors-md: (
   primary:    #387ef5,
   secondary:  #ffc900,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #444444,
+  light:      #fefefe,
+  dark:       #303030,
   favorite:   #11c1f3,
   splash:     #10CF9B
 );
@@ -98,8 +98,8 @@ $colors-wp: (
   primary:    #387ef5,
   secondary:  #ffc900,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #444444,
+  light:      #fefefe,
+  dark:       #303030,
   favorite:   #11c1f3,
   splash:     #10CF9B
 );
