--- a/Docs/examples -code/Section Code (Finished)/src/theme/variables.scss
+++ b/Docs/examples -code/Section Code (Finished)/src/theme/variables.scss
@@ -24,8 +24,8 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #bc7e40,
-  secondary:  #7ad61d,
+  primary:    #387ef5,
+  secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
