--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.loading-wrapper {
+	background: rgba(255,255,255,0.25) !important;
+	box-shadow: none !important;
+	zoom: 2;
+}
+
+.loading-spinner {
+	// zoom: 2;
+}
+
+.loading-content {
+	color: black;
+}
