--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,7 +15,7 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .loading-wrapper {
-	background: rgba(255,255,255,0.25) !important;
+	background: transparent !important;
 	box-shadow: none !important;
 	zoom: 2;
 }
