--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,16 +14,44 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.loading-md .loading-wrapper {
+	border-radius:64px !important;
+}
+
 .loading-wrapper {
-	background: transparent !important;
-	box-shadow: none !important;
-	zoom: 2;
+	background: rgba(250, 250, 250, 0.25) !important;
+	box-shadow: rgba(50, 50, 50, 0.25) !important;
+	flex-direction: column !important;
+	zoom: 1.5;
 }
 
 .loading-spinner {
-	// zoom: 2;
+	zoom: 2;
 }
 
 .loading-content {
 	color: black;
+	font-size: 5vw !important;
+  font-weight: bold;
+  text-align: center;
 }
+
+@keyframes colorStroke {
+   0% {fill: blue;}
+   13% {fill: red;}
+  26% {fill: green;}
+  49% {fill: yellow;}
+  68% {fill: green;}
+  86% {fill: red;}
+  100% {fill: blue;}
+}
+
+.spinner-bubbles {
+	circle {
+			transition: fill 10s ease;
+			animation-name: colorStroke !important;
+			animation-duration: 10s !important;
+			animation-iteration-count: infinite;
+			// fill: blue;
+		}
+	}
