Major startup bug fix, network status, geolocation service, alerts, etc.
Lots of good stuff.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -55,3 +55,16 @@
 			// fill: blue;
 		}
 	}
+
+.bar-button-md ion-icon {
+	color: white !important;
+	background: transparent !important;
+	font-size: 3.0em;
+}
+
+.bar-button-md[icon-only] ion-icon {
+		color: white !important;
+		background: transparent !important;
+		font-size: 3.0em;
+	}
+
