--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,12 @@
 page-login {
-	.loginerror {
-		
+	.loginerror {}
+	p {
+		font-size: 1.6rem !important;
+		color: #ffffff !important;
+		font-weight: bold !important;
+		font-style: italic !important;
+	}
+	.invalid {
+		border: 1px solid #ea6153;
 	}
 }
