logout button n sich

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,5 +1,8 @@
 page-settings {
-	.toolbar-title {
-		text-align: center;
-	}
+  .toolbar-title {
+    text-align: center;
+  }
+    .header-exists {
+    margin-top: 50px;
+  }
 }
