--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,14 +24,11 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #ffc900,
+  primary:    #488aff,
+  secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #fefefe,
-  dark:       #353535,
-  med-dark:   #565656,
-  favorite:   #11c1f3,
-  splash:     #10CF9B
+  light:      #f4f4f4,
+  dark:       #222
 );
 
 
@@ -63,63 +60,8 @@ $colors: (
 // so that the above variables are used and Ionic's
 // default are overridden.
 
-
-
-// Dark Theme
-// ----------------------------------
-
-$text-color:                                #ffffff                  !default;
-$link-color:                                color($colors, light)    !default;
-$background-color:                          color($colors, primary)  !default;
-$subdued-text-color:                        #666  !default;
-
-$font-family-base:                          "Lato" !default;
-$font-size-base:                            14px  !default; // 1.4rem == 14px
-
-$content-padding:                           16px  !default;
-$content-margin:                            16px  !default;
-
-$toolbar-background:                        #606060  !default; // rgb(  96,  96,  96)
-$toolbar-border-color:                      color($colors, favorite)  !default;
-$toolbar-text-color:                        $text-color  !default;
-$toolbar-active-color:                      $link-color  !default;
-$toolbar-inactive-color:                    #8c8c8c  !default;
-
-$list-text-color:                           $text-color  !default;
-$list-background-color:                     color($colors, med-dark)  !default;
-$list-border-color:                         #000  !default;
-
-
-$colors-ios: (
-  primary:    #387ef5,
-  secondary:  #ffc900,
-  danger:     #f53d3d,
-  light:      #fefefe,
-  dark:       #303030,
-  favorite:   #11c1f3,
-  splash:     #10CF9B
-);
-
-$colors-md: (
-  primary:    #387ef5,
-  secondary:  #ffc900,
-  danger:     #f53d3d,
-  light:      #fefefe,
-  dark:       #303030,
-  favorite:   #11c1f3,
-  splash:     #10CF9B
-);
-
-$colors-wp: (
-  primary:    #387ef5,
-  secondary:  #ffc900,
-  danger:     #f53d3d,
-  light:      #fefefe,
-  dark:       #303030,
-  favorite:   #11c1f3,
-  splash:     #10CF9B
-);
 @import "ionic.theme.default";
+
 
 // Ionicons
 // --------------------------------------------------
