Work Order and Fancy Select and shift updates
Yep

--- a/src/pages/work-order/work-order.scss
+++ b/src/pages/work-order/work-order.scss
@@ -9,4 +9,8 @@ page-work-order {
   .time {
     color: darkblue;
   }
+  .fancy-select-caller-button {
+    border: 1px solid black;
+    width: 100%;
+  }
 }
