--- a/src/pages/work-order/work-order.scss
+++ b/src/pages/work-order/work-order.scss
@@ -1,8 +1,14 @@
-page-work-order {
-  .hdrDate {
-    font-size: 11px;
-    text-align: right;
+ion-content {
+  .scroll-content {
+    overflow-y: auto;
   }
+}
+
+page-work-order {
+  // .hdrDate {
+  //   font-size: 11px;
+  //   text-align: right;
+  // }
   .date {
     color: blue;
   }
@@ -12,5 +18,42 @@ page-work-order {
   .fancy-select-caller-button {
     border: 1px solid black;
     width: 100%;
+  }
+  .ion-item-button-like {
+     :hover {
+      background-color: rgba(0, 0, 128, 0.02);
+    }
+     :active {
+      background-color: rgba(0, 0, 255, 0.3);
+    }
+  }
+  .work-order-payroll-hours-header {
+    font-size: 16px;
+    // font-size: 11px;
+    text-align: right;
+  }
+  .shift-hours-header {
+    font-weight: bold;
+  }
+  .shift-label {
+    font-weight: normal;
+  }
+  .shift-number {
+    font-weight: normal;
+  }
+  .shift-hours {
+    font-weight: bold;
+  }
+  .shift-date-select-results {
+    text-align: left;
+    width: 80%;
+    display: inline-block;
+    input {
+      text-align: right;
+      width: 80%;
+    }
+  }
+  .shift-date-select-icon {
+    // border: 1px solid black;
   }
 }
