Work Orders and server stuff

--- a/src/pages/fancy-select/fancy-select.scss
+++ b/src/pages/fancy-select/fancy-select.scss
@@ -21,7 +21,8 @@ $blue: blue;
 }
 
 .one-ion-option {
-  font-size: 3.0vw;
+  // font-size: 3.0vw;
+  font-size:18px;
   svg {
     fill: currentColor;
   }
