--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -8,6 +8,7 @@ onsite-tabs {
     button {
       flex: 0 0 auto;
       background-color: transparent;
+      box-shadow: none;
       color: rgba(100,100,100,1);
       :active {
         color: #488aff;
