--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -33,9 +33,9 @@ page-home {
     color: red;
   }
 
-  .bar-button-md ion-icon {
-    color: white !important;
-    background: transparent !important;
+  .bar-button-md ion-icon, .bar-button-md[icon-only] ion-icon {
+    color: grey !important;
+    // background: transparent !important;
   }
   p{
     font-size: 14px;
@@ -49,5 +49,8 @@ page-home {
       columns: darkred;
       font-size: 20px;
     }
+  }
+  .header-close-button {
+    color: black !important;
   }
 }
