Translation service and other updates

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -35,7 +35,7 @@ ion-content div.scroll-content{
 
 .loading-content {
   color: black;
-  font-size: 5vw !important;
+  font-size: 32px !important;
   font-weight: bold;
   text-align: center;
 }
