--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -60,13 +60,13 @@ ion-content div.scroll-content{
   }
 
 .bar-button-md ion-icon {
-  color: white !important;
+//   color: white !important;
   background: transparent !important;
   font-size: 3.0em;
 }
 
 .bar-button-md[icon-only] ion-icon {
-    color: white !important;
+//     color: white !important;
     background: transparent !important;
     font-size: 3.0em;
   }
