--- a/src/pages/work-order/work-order.scss
+++ b/src/pages/work-order/work-order.scss
@@ -60,4 +60,8 @@ page-work-order {
   .work-order-delete-button {
     color: black;
   }
+  .bar-button-md ion-icon, .bar-button-md[icon-only] ion-icon {
+    color: grey !important;
+    // background: transparent !important;
+  }
 }
