Oodles of updates and SVG and stuff

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -70,3 +70,7 @@ ion-content div.scroll-content{
     background: transparent !important;
     font-size: 3.0em;
   }
+
+.alert-message {
+  overflow-y: auto;
+}
