Preferences, bugfixes, language, etc.

--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -1,8 +1,8 @@
 page-tech-settings {
-    .toolbar-title {
+  .toolbar-title {
     text-align: center;
   }
-  ion-content.padding.xtra-top-padding{
+  .xtra-top-padding{
     margin-top: 40px;
   }
 }
