this n that n sich

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -64,6 +64,9 @@ page-home {
       fill: currentColor;
     }
   }
+  span.normal-txt {
+    color: black;
+  }
   .header-close-button {
     color: black !important;
   }
