--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -1,138 +1,102 @@
 page-report-history {
-	.frozenToolbar {
-
-	}
-
-	.reportHeaderList {
-
-	}
-
-	.scrollList {
-		height: 80vh;
-	}
-	.center {
-		text-align: center;
-	}
-	[item-start] {
-		padding-left: 8%;
-	}
-	.reportListTitle {
-		text-align: center;
-		font-weight: bold;
-		font-size: 1.5em;
-		color: white;
-	}
-	.reportListHeader {
-		font-weight: bold;
-	}
-	.invisibleIcon {
-		visibility: hidden;
-	}
-	.reportList {
-
-	}
+  .frozenToolbar {}
+  .reportHeaderList {}
+  .scrollList {
+    height: 80vh;
+  }
+  .center {
+    text-align: center;
+  }
+  [item-start] {
+    padding-left: 8%;
+  }
+  .reportListTitle {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: white;
+  }
+  .reportListHeader {
+    font-weight: bold;
+  }
+  .invisibleIcon {
+    visibility: hidden;
+  }
+  .reportList {}
   .report-history-list-item-sliding {
-    cursor:pointer;
+    cursor: pointer;
      :hover {
       background-color: rgba(0, 0, 128, 0.02);
     }
      :active {
       background-color: rgba(0, 0, 255, 0.3);
     }
-    // ion-label {
-    //   :hover {
-
-    //   }
-    //   :active {
-
-    //   }
-    // }
   }
-  // .report-history-list-item {
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   // justify-content: space-around;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   min-width: 500px;
-  // }
-  .report-history-list-item {
-    display: block;
-  }
-  .report-history-list-item ion-label {
-    // display: inline-block;
+  ion-item.report-history-list-item {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    // justify-content: space-around;
     justify-content: space-between;
     align-items: center;
-    // min-width: 500px;
+    div.report-history-report-item {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      align-items: center;
+    }
   }
-
   .report-history-list-item-icon {
     cursor: pointer;
   }
-
   .report-history-list-item-label {
     display: flex;
     flex-direction: row;
-    // justify-content: space-around;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
-    :hover {
-
-    }
-    :active {
-
-    }
+     :hover {}
+     :active {}
   }
-
-  .report-history-report-item, .report-history-report-notes-item {
+  ion-item-divider button.ion-button.icon-only,
+  span.button-inner,
+  .button-ios,
+  .button-md,
+  .button-wp {
+    background-color: transparent !important;
+    background: none;
+  }
+  ion-icon.shft-num-icon {
+    font-size: 25px;
+  }
+  .report-history-report-item,
+  .report-history-report-notes-item {
     flex: 1 0 auto;
     text-align: left;
-    // max-width: 25%;
-    max-width: 200px;
-    min-width: 200px;
   }
-
   .report-history-report-item-header {
     display: inline-block;
-    max-width: 30%;
     text-align: right;
     font-weight: bold;
   }
-
   .report-history-report-item-data {
-    max-width: 30%;
     overflow: hidden;
     text-align: left;
   }
-
   .report-history-report-date {
     flex: 1 0 auto;
-    display: inline-block;
     text-align: center;
   }
-
   .report-history-unit-number {
     flex: 1 0 auto;
-    display: inline-block;
     text-align: center;
   }
-
   .report-history-no-report {
     flex: 1 0 auto;
-    display: inline-block;
     text-align: center;
     font-style: italic;
   }
-
   .report-history-notes-data {
-    /* overflow: visible; */
-    display: inline-block;
     text-overflow: ellipsis;
     p {
       max-width: 101px;
@@ -140,15 +104,4 @@ page-report-history {
       text-overflow: ellipsis;
     }
   }
-
-  // .report-history-list-item {
-  // }
-  // .report-history-list-item ion-label {
-  //   :hover {
-
-  //   }
-  //   :active {
-
-  //   }
-  // }
 }
