--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -82,5 +82,36 @@ page-home {
   .hoursOver {
     color: red;
   }
+  .ion-item-button-like {
+    cursor: pointer;
+    // :hover {
+    //   background-color: rgb(0, 0, 128);
+    // }
+    // :active {
+    //   background-color: rgb(0, 0, 255);
+    // }
+    :hover {
+      background-color: rgba(0, 0, 128, 0.02);
+    }
+    :active {
+      background-color: rgba(0, 0, 255, 0.3);
+    }
+  }
+
+  .ion-item-button-like .label {
+    cursor: pointer;
+    :hover {
+      // background-color: rgb(0, 0, 128);
+    }
+    :active {
+      // background-color: rgb(0, 0, 255);
+    }
+    // :hover {
+    //   background-color: rgba(0, 0, 128, 0.02);
+    // }
+    // :active {
+    //   background-color: rgba(0, 0, 255, 0.3);
+    // }
+  }
 
 }
