--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -65,6 +65,7 @@ page-report-history {
   .button-wp {
     background-color: transparent !important;
     background: none;
+    box-shadow: none;
   }
   ion-icon.shft-num-icon {
     font-size: 25px;
