--- a/src/pages/fancy-select/fancy-select.scss
+++ b/src/pages/fancy-select/fancy-select.scss
@@ -1,7 +1,13 @@
 .fancy-select-modal .modal-wrapper {
-  height: 60vh;
-  min-height: 500px;
-  display: flex;
+  position: absolute;
+  z-index: 50;
+  top: 50;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: block;
+  margin: 0;
+  padding: 0
 }
 
 $red: red;
@@ -56,5 +62,14 @@ page-fancy-select {
   }
   ion-title {
     text-align: center;
+  }
+  div.full-screen-modal {
+    position: absolute;
+    z-index: 50;
+    top: 50;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    display: block;
   }
 }
