Home page and payroll periods and shifts updates

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -138,4 +138,26 @@ page-home {
     // }
   // }
 
+  .home-card-header-payroll-period {
+    text-align: center;
+  }
+
+  .home-card-header-payroll-period-label-item {
+    text-align: center;
+  }
+
+  .home-card-header-payroll-period-label-label {
+    text-align: center;
+  }
+
+  .home-card-header-payroll-period-data-item {
+    text-align: center;
+    width: 90%;
+  }
+
+  .home-card-header-payroll-period-data-select {
+    width: 90%;
+    max-width: 90%;
+  }
+
 }
