--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -31,7 +31,7 @@ page-home {
     margin-left: 0;
     margin-right: 0;
     width: 100%;
-    background-color: rgba(250,250,245, 0.65);
+    background-color: transparent;
   }
   ion-title {
     color: red !important;
