--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,9 +24,6 @@ page-home {
   .header-exists {
     margin-top: 30px;
   }
-  .logout-button {
-    // margin-top: 100px;
-  }
   ion-card.shift-summary {
     margin-left: 0;
     margin-right: 0;
@@ -56,7 +53,22 @@ page-home {
   .endSingleIcon {
     color: red;
   }
+  ion-content > div.scroll-content > ion-card > ion-list > ion-list-header.blank-list-header.item.list-header {
+    border-top: none;
+  }
+  ion-content > div.scroll-content > ion-card > ion-list > ion-list-header {
+    margin-bottom: 0;
+  }
+  ion-content > div.scroll-content > ion-card > ion-card-header > ion-item.home-card-header-payroll-period-data-item.item.item-block.item-select.input-has-value {
+    margin: auto;
+    padding: 0;
 
+  }
+  ion-card > ion-card-header > ion-item.home-card-header-payroll-period-data-item.item.item-block.item-select.input-has-value > div.item-inner > div > ion-select {
+    width: 100% !important;
+    max-width: 100vw;
+    border: none;
+}
   .bar-button-md ion-icon, .bar-button-md[icon-only] ion-icon {
     color: grey !important;
     // background: transparent !important;
@@ -108,12 +120,6 @@ page-home {
   }
   ion-list>ion-item.ion-item-button-like {
     cursor: pointer;
-    // :hover {
-    //   background-color: rgb(0, 0, 128);
-    // }
-    // :active {
-    //   background-color: rgb(0, 0, 255);
-    // }
     :hover {
       background-color: rgba(0, 0, 128, 0.02);
     }
@@ -121,23 +127,6 @@ page-home {
       background-color: rgba(0, 0, 255, 0.3);
     }
   }
-
-  // .ion-item-button-like .label {
-    // cursor: pointer;
-    // :hover {
-      // background-color: unset;
-    // }
-    // :active {
-      // background-color: unset;
-    // }
-    // :hover {
-    //   background-color: rgba(0, 0, 128, 0.02);
-    // }
-    // :active {
-    //   background-color: rgba(0, 0, 255, 0.3);
-    // }
-  // }
-
   .home-card-header-payroll-period {
     text-align: center;
   }
