Updates in progress

--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -63,8 +63,8 @@ page-report-history {
   .button-ios,
   .button-md,
   .button-wp {
-    background-color: transparent !important;
-    background: none;
+    // background-color: transparent !important;
+    // background: none;
     box-shadow: none;
   }
   ion-icon.shft-num-icon {
