OK so things are good, I think

--- a/src/pages/fancy-select/fancy-select.scss
+++ b/src/pages/fancy-select/fancy-select.scss
@@ -72,4 +72,8 @@ page-fancy-select {
     width: 100vw;
     display: block;
   }
+  .fancy-select-period-title {
+    text-align: center;
+
+  }
 }
