--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -5,14 +5,22 @@
     color:black;
   }
 onsite-tabs {
+  overflow: visible;
+  #onsite-nav > button:nth-child > span {
+    overflow: visible;
+  }
+  z-index: 48;
   #onsite-nav {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
+    overflow: visible;
     button {
+      z-index: 49;
       flex: 0 0 auto;
+      overflow: visible;
       background-color: transparent;
       box-shadow: none;
       color: rgba(100,100,100,1);
@@ -26,5 +34,30 @@ onsite-tabs {
   }
   .non-Hlght {
     color:black;
+  }
+
+  div.badge-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+    width: 50%;
+    z-index: 200;
+    position: absolute;
+    top: 0px;
+    left: 20px;
+    overflow: visible;
+  }
+  div.badge-container > div.msg-badge {
+    flex: 1 1 auto;
+    border-radius: 100px;
+    font-weight: 700;
+    color: white;
+    background-color: rgba(180,0,0,1);
+    padding: 5px 0;
+    font-size: 11px;
+    line-height: 11px;
   }
 }
