Repair history edit and stuff

--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -64,4 +64,20 @@ page-report {
     color: grey !important;
     // background: transparent !important;
   }
+
+  .red {
+    color: red;
+  }
+
+  .darkred {
+    color: darkred;
+  }
+
+  .green {
+    color: green;
+  }
+
+  .black {
+    color: black;
+  }
 }
