--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -7,8 +7,13 @@ page-tech-settings {
   // }
   div.scroll-content {
     height: 80%;
+    margin-top: 50px;
     padding-bottom: 200px;
     margin-bottom: 300px;
   }
+
+  // .xtra-top-padding {
+  //   margin-top: 40px;
+  // }
 
 }
