Popover fix, maybe

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -149,4 +149,11 @@ page-home {
     max-width: 90%;
   }
 
+  ion-popover page-popover-template .scroll-content {
+    height: 300vh;
+    button {
+      margin-bottom: 1500px;
+    }
+  }
+
 }
