--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -137,6 +137,8 @@ page-home {
   }
   .home-card-header-payroll-period {
     text-align: center;
+    border-bottom: 1px solid #dedede;
+    // margin-bottom: 5px;
   }
 
   .home-card-header-payroll-period-label-item {
@@ -155,6 +157,11 @@ page-home {
   .home-card-header-payroll-period-data-select {
     width: 90%;
     max-width: 90%;
+  }
+
+  .home-card-body-list {
+    margin-top: 1px;
+    // border-top: 1px solid #dedede;
   }
 
   .home-hours-submitted {
