Tech Settings and misc reports update

--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -8,6 +8,7 @@ page-tech-settings {
     width: 100%;
     min-width: 100%;
     max-width: 80vw;
+    min-height: 50px;
     align-self: center;
     padding-left: 8px;
     padding-top: 8px;
