--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -206,9 +206,11 @@ page-home {
 
   .home-grid-key {
     width: 70%;
-    border: 1px solid lightgrey;
+    border: 1px solid rgba(230,230,230,1.0);
+    padding: 0;
   }
   .home-grid-row {
+    border: 1px solid rgba(230,230,230,1.0);
   }
   .home-grid-col1 {
     font-family: "Courier New", monospace;
