--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -227,6 +227,14 @@ page-home {
     text-align: left;
     padding-top: 8px;
   }
+  .home-grid-key-caption {
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
   // ion-popover page-popover-template .scroll-content {
   //   height: 300vh;
   //   button {
