--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -7,43 +7,59 @@ page-tech-settings {
     flex: 0 0 100%;
     width: 100%;
     min-width: 100%;
-    max-width: 80vw;
-    min-height: 30px;
+    // max-width: 80vw;
+    min-height: 35px;
     align-self: center;
     padding-left: 8px;
     padding-top: 8px;
     padding-bottom: 8px;
-}
-form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-icon {
-  width: 20px !important;
-}
-form > ion-list > ion-item {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-text {
-  // flex: 0 0 80%;
-  // min-width: 80%;
-  color: #488aff;
-}
-ion-input {
-  color: #488aff;
-}
-ion-label.manual-float-label{
-  // transform: translate3d(0, 0, 0) scale(0.8);
-  // transform-origin: left top;
-  flex: 0 0 100%;
-  transform: translate3d(0, 0, 0) scale(0.8);
-  margin-left: 0;
-  margin-right: auto;
-}
+  }
+  form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-icon {
+    width: 20px !important;
+  }
+  form > ion-list > ion-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-text {
+    // flex: 0 0 80%;
+    // min-width: 80%;
+    color: #488aff;
+  }
+  .tech-settings-input-item {
+    .input-wrapper {
+      min-height: 40px;
+    }
+  }
+  .user-settings-input {
+    color: #488aff;
+    min-height: 35px;
+    padding: 0;
+  }
+  ion-input {
+  }
+  ion-label.manual-float-label{
+    // transform: translate3d(0, 0, 0) scale(0.8);
+    // transform-origin: left top;
+    flex: 0 0 100%;
+    transform: translate3d(0, 0, 0) scale(0.8);
+    margin-left: 0;
+    margin-right: auto;
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
   div.scroll-content {
     height: 80%;
     margin-top: 50px;
     padding-bottom: 200px;
     margin-bottom: 300px;
+  }
+  .tech-settings-select-item {
+    .input-wrapper {
+      min-height: 40px;
+    }
   }
 }
