Tech settings iOS fix

--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -50,6 +50,7 @@ page-tech-settings {
     margin-right: auto;
     margin-top: 2px;
     margin-bottom: 2px;
+    min-height: 20px;
   }
   div.scroll-content {
     height: 80%;
