--- a/src/components/tabs/tabs.html
+++ b/src/components/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-footer no-border>
   <ion-toolbar>
     <div id="onsite-nav">
-      <button ion-button icon-only [disabled]="allTabs.disabled" (click)="goToPage(tab.name)" *ngFor="let tab of tabInfo; let i=index">
+      <button ion-button icon-only [disabled]="allTabs.disabled" (tap)="goToPage(tab.name)" (press)="aboutPage($event, tab.name)" *ngFor="let tab of tabInfo; let i=index">
         <ion-icon [class.hlght]="tab.active" id="tab{{i+1}}" [name]="tab.icon">
           <div class="badge-container" >
             <div class="msg-badge" [class.hide]='tab.hideBadge'>{{tab.badgeCount}}</div>
