--- a/src/components/clock/clock.scss
+++ b/src/components/clock/clock.scss
@@ -259,7 +259,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/clockface.png");
+    background: url("./images/roman-num.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
