Updates and bugfixes and enhancements, dear god!

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -83,3 +83,13 @@ ion-content div.scroll-content{
     background-color: rgba(0, 0, 255, 0.3);
   }
 }
+
+.app-title {
+
+}
+
+.app-user {
+  text-align: center;
+  font-size: 12px;
+}
+
