Let's have a story. Once there were two children who lived in a forest. They lived with their grandfather, who everyone said was mad ... mad enough to KILL!

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -104,6 +104,7 @@ ion-content div.scroll-content{
   min-height: var(--widthA);
   align-items: center;
   justify-content: space-around;
+  // margin-top: calc(25vh);
 
   clock {
     flex: 1 1 auto;
