--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -104,7 +104,7 @@ ion-content div.scroll-content{
   min-height: var(--widthA);
   align-items: center;
   justify-content: space-around;
-  // margin-top: calc(25vh);
+  margin-top: calc(15vh);
 
   clock {
     flex: 1 1 auto;
